# openstack-ansible-os_cinder

./: .gitreview  CONTRIBUTING.rst  README.rst  bindep.txt  setup.cfg  tox.ini
defaults/: main.yml
examples/: playbook.yml
handlers/: main.yml
meta/: main.yml
tasks/: cinder_backends.yml  cinder_cleanup_old_facts.yml  cinder_db_post_setup.yml  cinder_db_setup.yml  cinder_db_sync.yml  cinder_init.yml  cinder_init_common.yml  cinder_init_systemd.yml  cinder_init_upstart.yml  cinder_install.yml  cinder_install_apt.yml  cinder_install_distro.yml  cinder_install_source.yml  cinder_install_yum.yml  cinder_lvm_config.yml  cinder_post_install.yml  cinder_pre_install.yml  cinder_qos.yml  cinder_selinux.yml  cinder_service_add.yml  cinder_service_setup.yml  cinder_uwsgi.yml  main.yml
templates/: cinder-systemd-init.j2  cinder-systemd-tempfiles.j2  cinder-systemd-tmpfiles.j2  cinder-upstart-init.j2  cinder-uwsgi.ini.j2  cinder.conf.j2  lvm.conf.j2  nfs_shares.j2  rootwrap.conf.j2
tests/: ansible-role-requirements.yml  benchmark-upgrade.yml  inventory  os_cinder-overrides.yml  test-cinder-functional.yml  test-cinder-resources-upgrade.yml  test-cinder-upgrades.sh  test-install-cinder.yml  test-install-keystone.yml  test-install-previous-cinder.yml  test-prepare-host.yml  test-prepare-keys.yml  test-prepare-vg.yml  test-upgrade.yml  test-vars.yml  test.yml
vars/: debian.yml  distro_install.yml  main.yml  redhat-7.yml  redhat.yml  source_install.yml  suse-42.yml  suse.yml  ubuntu-14.04.yml  ubuntu-16.04.yml  ubuntu.yml
zuul.d/: jobs.yaml  project.yaml
(+8 files in other folders)
